fix horizontal scrolling on larger screens

--- a/assets/_style.sass
+++ b/assets/_style.sass
@@ -39,6 +39,7 @@ a:hover,
     transform: translateX(-50%)
     left: 50%
     position: relative
+    margin-right: -100%
 
     @media (max-width: 50rem)
       max-width: calc(100vw - 2rem)
